--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "debug": "node --inspect-brk -r sucrase/register src/server.js"
   },
   "devDependencies": {
     "eslint": "^6.2.2",
